<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_item_photo"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        tools:src="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/img_item_photo"
        android:layout_toRightOf="@id/img_item_photo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/item_name" />

        <TextView
            android:id="@+id/tv_item_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/item_type"/>

        <TextView
            android:id="@+id/tv_item_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/item_location" />

    </LinearLayout>
</RelativeLayout>